[4.x] Fix missing gap cursor in Bard fullscreen mode (#8074)

--- a/resources/css/components/fieldtypes/bard.css
+++ b/resources/css/components/fieldtypes/bard.css
@@ -220,13 +220,8 @@
     }
 
     & > .bard-editor > div > .ProseMirror {
-        @apply px-6 py-16 flex flex-col;
+        @apply px-6 py-16;
         min-height: calc(100vh - 120px);
-
-        /*  To remove min height from nested bard fields inside bard in fullscreen mode. */
-        * > .ProseMirror {
-            min-height: auto;
-        }
 
         &:focus {
             @apply ring-0;
